# KSTAR_tokamak_simulator

./: Dockerfile  kstar_simulator.py  pyproject.toml
common/: model_structure.py  utils.py
